student css update timetable.html

--- a/templates/common/time-table.html
+++ b/templates/common/time-table.html
@@ -6,3 +6,16 @@
 <h1>Time Table Page</h1>
     
 {% endblock content %}
+<body>
+    <div class="row">
+         
+        <div class="col-2">
+            <h2 class="title">Timetable</h2>
+            <img src="image/tt.jpg" width="1200px" height="600px">
+        </div>
+</div>
+
+    
+
+    <script src="" async defer></script>
+</body>
