--- a/static/css/student-style.css
+++ b/static/css/student-style.css
@@ -1,3 +1,4 @@
+
 *{
     margin: 0;
     padding: 0;
@@ -7,7 +8,12 @@ body{
     background: radial-gradient(#fff,#84efff);
     font-family: 'Poppins', sans-serif;
 }
-
+.video{
+    margin-top: 40px;
+    margin-bottom: 40px;
+    width: 500px;
+    height: 281px;
+}
 .navbar{
 
     display: flex;
@@ -56,8 +62,8 @@ p{
     justify-content: space-around;
 }
 .col-1{
-    flex-basis: 50%;
-    min-width: 300px;
+    flex-basis: 35%;
+    min-width: 0px;
 
 }
 .col-2{
@@ -71,7 +77,7 @@ p{
 }
 .btn{
     display: inline-block;
-    background: #ff2953;
+    background: #84efff;
     color: #fff;
     padding: 8px 30px;
     margin: 30px 0;
@@ -102,7 +108,7 @@ p{
     margin: auto;
 }
 .col4{
-    flex-basis: 25%;
+    flex-basis: 33%;
     padding: 10px;
     min-width: 200px;
     margin-bottom: 50px;
@@ -120,15 +126,15 @@ p{
 }
 .title{
     text-align:center ;
-    /* margin: 80px auto 80px; */
+    margin: 0px auto 20px;
     position: relative;
-    /* line-height: 60px; */
+    line-height: 60px;
     color: #555;
 
 }
 .title::after{
  content: '';
- background: #ff2953;
+ background: #4addf4;
  width: 80px;
  height: 5px;
  border-radius: 5px;
@@ -148,7 +154,11 @@ h4{
     transform: translateY(-10px);
 }
 .info{
+   
     justify-content: space-around;
+   
+
+ 
 }
 .sec{
     max-width: 100%;
@@ -199,7 +209,8 @@ color: #080808;
     color: rgb(0, 0, 0);
     margin-bottom: 20px;
 }
-.footercol1, .footercol2, .footercol3 , .footercol4{
+.footer
+, .footercol2, .footercol3 , .footercol4{
     min-width: 250px;
     margin-bottom: 20px;
 }
@@ -243,57 +254,6 @@ ul{
     display: none;
 
 }
-
-.sub_card_body
-{
-    background: #e0d68b; /* fallback color */
-    background: radial-gradient(#fff,#84efff);
-    background-repeat: no-repeat;
-    background-attachment: fixed; /*spans the whole page*/
-}
-.subject_container{
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    background: radial-gradient(#fff,#84efff);
-    /* border: 2px solid blue; */
-    border-radius: 20px;
-    box-shadow: 0px 10px 20px rgb(51, 51, 51);
-    width: 98%;
-    margin: auto;
-}
-.subject{
-    /* display: inline-block; */
-    width: 300px;
-    height: 300px;
-    border: 2px solid grey;
-    text-align: center;
-    margin: 20px;
-    /* box-shadow: 10px 5px 15px rgb(25, 179, 240); */
-    box-shadow: 10px 10px 15px rgb(100, 100, 100);
-    border-radius: 10px;
-    font-family: sans-serif;
-    padding-bottom: 10px;
-    background-color: white;
-    padding-top: 40px;
-}
-
-.sub_info{
-    /* display: inline-block; */
-    border: 1px solid grey;
-    /* margin-bottom: 15px; */
-    font-family: sans-serif;
-    background-color: grey;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    padding: 4px;   
-    position: relative;
-    top: 20px;
-}
-
-/* MEDIA QUERIES */
-
 @media only screen and (max-width: 600px){
  
    nav ul{
@@ -323,12 +283,9 @@ nav ul li a{
    
     transition: transform 0.5s;
 }
-.col-2 img:hover{
+/* .col-2 img:hover{
     transform: translateY(-15px);
-}
-
-
-
+} */
 @media only screen and (max-width: 600px){
     .row{
         text-align: center;
@@ -376,7 +333,7 @@ nav ul li a{
     font-weight: 400;
 }.btn{
     display: inline-block;
-    background: #ff2953;
+    background: #34c0d5;
     color: #fff;
     padding: 8px 30px;
     margin: 30px 0;
@@ -385,7 +342,7 @@ nav ul li a{
    margin: none;
 }
 .btn:hover{
-    background:rgb(155, 88, 88);
+    background:rgb(151, 241, 249);
 }
 .contactcol input, .contactcol textarea{
     width: 100%;
@@ -406,19 +363,21 @@ nav ul li a{
 .log{
     height: 100%;
     width: 100%;
+   
+   
 }
 .formbox{
     width: 380px;
-    height: 500px;
+    height: 480px;
     position: relative;
-    margin: 20px auto;
+    margin: 6% auto;
     background: #fff;
     padding: 5px;
     overflow: hidden;
     border-radius: 15px;
 }
 .button{
-    width: 120px;
+    width: 220px;
     margin: 35px auto;
     position: relative;
     box-shadow: 0 0 20px 9px  #f862944f;
@@ -453,7 +412,7 @@ nav ul li a{
     border-radius: 1px
 }
 .inputgrp{
-    top: 100px;
+    top: 180px;
     position: absolute;
     width: 280px;
     transition: 0.5s;
@@ -888,3 +847,14 @@ margin-top: 30px;
           .d:hover{
               color: #f44336;
           }
+          .btn5{
+            display: inline-block;
+            background: #34c0d5;
+            color: #fff;
+            transition:background 0.5s;
+           /* margin: none; */
+        }
+        .btn5:hover{
+            background:rgb(151, 241, 249);
+        }
+       
