--- a/templates/dashboard/student.html
+++ b/templates/dashboard/student.html
@@ -21,9 +21,9 @@
                 <div class="row"> 
                     <div class="col-2">
                         {% if user.profile_pic %}
-                            <img src="{{user.profile_pic.url}}">
+                            <img src="{{user.profile_pic.url}}" width="400px" height="400px">
                         {% else %}
-                            <img src="{% static 'images/profile.webp' %}">
+                            <img src="{% static 'images/profile.webp' %}" width="400px" height="400px">
                         {% endif %}
                     </div>
                     <div class="col-2">
