--- a/templates/dashboard/student.html
+++ b/templates/dashboard/student.html
@@ -43,23 +43,23 @@
                 <div class="col4">
                     <h4>{{enrollment.subject_1.name}}</h4>
                     <p>{{enrollment.subject_1.department.name}}</p>
-                    <a href="{% url 'change-elective' enrollment.id %}" class="btn">CHANGE</a>
+                    <a href="{% url 'change-elective' 1 %}" class="btn">CHANGE</a>
                     <a href="{% url 'single-subject' enrollment.subject_1.id %}" class="sub_info">Subject Details</a>
                 </div>
                 <div class="col4">
                     <h4>{{enrollment.subject_2.name}}</h4>
                     <p>{{enrollment.subject_2.department.name}}</p>
-                    <a href="{% url 'change-elective' enrollment.id %}" class="btn">CHANGE</a>
+                    <a href="{% url 'change-elective' 2 %}" class="btn">CHANGE</a>
                     <a href="{% url 'single-subject' enrollment.subject_2.id %}" class="sub_info">Subject Details</a>
                 </div>
                 <div class="col4">
                     <h4>{{enrollment.subject_3.name}}</h4>
                     <p>{{enrollment.subject_3.department.name}}</p>
-                    <a href="{% url 'change-elective' enrollment.id %}" class="btn">CHANGE</a>
+                    <a href="{% url 'change-elective' 3 %}" class="btn">CHANGE</a>
                     <a href="{% url 'single-subject' enrollment.subject_3.id %}" class="sub_info">Subject Details</a>
                 </div>
         {% else %}
-            <center><button href="" class="btn">Select Electives</button></center>
+            <center><a href="{% url 'enroll' 1 %}" class="btn">Select Electives</a></center>
         {% endif %}
         </div>
     </div>
