--- a/templates/elective/enroll-form.html
+++ b/templates/elective/enroll-form.html
@@ -11,8 +11,10 @@
                 <nav>
                     <ul id="menuitem">
                         <li><a href="{% url 'index' %}">HOME</a></li>
-                        <li><a href="{% url 'all-subjects' %}">ELECTIVE</a></li>
+                        <li><a href="{% url 'student-dashboard' %}">PROFILE</a></li>
+                        <li><a href="{% url 'all-subjects' %}">SUBJECTS</a></li>
                         <li><a href="{% url 'time-table' %}">TIME TABLE</a></li>
+                        <li><a href="{% url 'contact-us' %}">CONTACT</a></li>
                     </ul>
                 </nav>
                 <img src="{% static 'images/menu.png' %}" width="30px" height="30px" class="menu" onclick="menutoggle()">
