--- a/templates/dashboard/student.html
+++ b/templates/dashboard/student.html
@@ -44,14 +44,14 @@
                     <h4>{{enrollment.subject_1.name}}</h4>
                     <p>{{enrollment.subject_1.department.name}}</p>
                     <a href="{% url 'change-elective' 1 %}" class="btn">CHANGE</a>
-                    <a href="{% url 'single-subject' enrollment.subject_1.id %}" class="sub_info">Subject Details</a>
+                    <br><a href="{% url 'single-subject' enrollment.subject_1.id %}" class="sub_info">Subject Details</a>
                 </div>
                 {% if enrollment.subject_2 %}
                 <div class="col4">
                     <h4>{{enrollment.subject_2.name}}</h4>
                     <p>{{enrollment.subject_2.department.name}}</p>
                     <a href="{% url 'change-elective' 2 %}" class="btn">CHANGE</a>
-                    <a href="{% url 'single-subject' enrollment.subject_2.id %}" class="sub_info">Subject Details</a>
+                    <br><a href="{% url 'single-subject' enrollment.subject_2.id %}" class="sub_info">Subject Details</a>
                 </div>
                 {% else %}
                 <div class="col4">
@@ -63,7 +63,7 @@
                     <h4>{{enrollment.subject_3.name}}</h4>
                     <p>{{enrollment.subject_3.department.name}}</p>
                     <a href="{% url 'change-elective' 3 %}" class="btn">CHANGE</a>
-                    <a href="{% url 'single-subject' enrollment.subject_3.id %}" class="sub_info">Subject Details</a>
+                    <br><a href="{% url 'single-subject' enrollment.subject_3.id %}" class="sub_info">Subject Details</a>
                 </div>
                 {% else %}
                 <div class="col4">
