--- a/templates/dashboard/student.html
+++ b/templates/dashboard/student.html
@@ -37,6 +37,7 @@
             </div>
 
     <h2 class="title">SELECTED ELECTIVES</h2>
+    <div class="feedback">
     <div class="smallcon">
         <div class="row">
         {% if enrollment %}
@@ -75,4 +76,5 @@
         {% endif %}
         </div>
     </div>
+</div>
 {% endblock content %}
