--- a/templates/elective/enroll-form.html
+++ b/templates/elective/enroll-form.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="formbox">
-        <h3 class="x">Enrollment Form</h3>
+        <h2 style="text-align: center; margin-top: 20px;">Enrollment Form</h2>
         <form id="login" class="inputgrp" method="post">
             {% csrf_token %}
             <select id="subject" name="subject" class="an" required style="color: grey; width: 100%; padding: 15px; margin-bottom: 15px;">
