--- a/templates/auth/admin/admin-forgot.html
+++ b/templates/auth/admin/admin-forgot.html
@@ -5,7 +5,7 @@
     <div class="formbox">
         <img class="y" src="{% static 'images/logo.png' %}" width="100px" height="100px">
         <h3 class="x">Forgot Password</h3>
-        <form id="login" class="inputgrp">
+        <form id="login" class="inputgrp" method="post">
             {% csrf_token %}
             <input type="email" name="email" class="inputfeild" placeholder="Enter your email" required>
             <button type="submit" name="submit" class="submitbtn">SUBMIT</button>
