--- a/static/css/student-style.css
+++ b/static/css/student-style.css
@@ -268,10 +268,10 @@ ul{
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    background: radial-gradient(#fff,#84efff);
+    /* background: radial-gradient(#fff,#84efff); */
     /* border: 2px solid blue; */
-    border-radius: 20px;
-    box-shadow: 0px 10px 20px rgb(51, 51, 51);
+    /* border-radius: 20px; */
+    /* box-shadow: 0px 10px 20px rgb(51, 51, 51); */
     width: 98%;
     margin: auto;
 }
@@ -302,7 +302,12 @@ ul{
     border-radius: 5px;
     padding: 4px;   
     position: relative;
-    top: 20px;
+    top: 30px;
+}
+
+.subject:hover{
+    transform: translateY(-10px);
+    transition: transform 0.5s;
 }
 
 @media only screen and (max-width: 600px){
