--- a/templates/dashboard/admin.html
+++ b/templates/dashboard/admin.html
@@ -60,13 +60,18 @@
             <p class="chart-title">Students opted for subject</p>
             <div id="bar-chart"></div>
           </div>
+          <div class="charts-card">
+            <p class="chart-title">Purchase and Sales Orders</p>
+            <div id="area-chart"></div>
+          </div>
         </div>
+        
       </main>
 
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.35.3/apexcharts.min.js"></script>
    
-    <script src="{% static 'js/scirpts.js' %}"></script>
+    <script src="{% static 'js/graph-script.js' %}"></script>
 
     {% endblock content %}
