dashboard dropdown done

--- a/templates/dashboard/admin.html
+++ b/templates/dashboard/admin.html
@@ -3,9 +3,45 @@
 
 {% block content %}
 
+<style>
+  .dropbtn {
+    background-color: transparent;
+    color: black;
+    padding: 0px;
+    font-size: 20px;
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
+  }
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  overflow: auto;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown a:hover {background-color: #ddd;}
+
+.show {display: block;}
+</style>
+
+
     <div class="grid-container">
-
-
       <aside id="sidebar">
         <div class="sidebar-title">
           <div class="sidebar-brand">
@@ -13,9 +49,41 @@
 
         <ul class="sidebar-list">
           <li class="sidebar-list-item"><a href="{% url 'admin-dashboard' %}">Dashboard</a></li>
-          <li class="sidebar-list-item"><a href="{% url 'all-students' %}">Students</a></li>
-          <li class="sidebar-list-item"><a href="{% url 'all-teachers' %}">Teacher</a></li>
-          <li class="sidebar-list-item"><a href="{% url 'all-subjects' %}">Subject</a></li>
+          <!-- <li class="sidebar-list-item"><a href="{% url 'all-students' %}">Students</a></li> -->
+          <!-- <li class="sidebar-list-item"><a href="{% url 'all-teachers' %}">Teacher</a></li> -->
+          <!-- <li class="sidebar-list-item"><a href="{% url 'all-subjects' %}">Subject</a></li> -->
+          
+          <li class="sidebar-list-item">
+            <div class="dropdown" >
+              <button onclick="myFunction()" class="dropbtn">Student &#9660;</button>
+              <div id="myDropdown" class="dropdown-content">
+                <a href="#">Add Student</a>
+                <a href="#about">All Students</a>
+                <a href="#contact">Excel(add multiple)</a>
+              </div>
+            </div>
+          </li>
+
+          <li class="sidebar-list-item">
+            <div class="dropdown" >
+              <button onclick="myFunction2()" class="dropbtn">Teacher &#9660;</button>
+              <div id="myDropdown2" class="dropdown-content">
+                <a href="#">Add Teacher</a>
+                <a href="#about">All Teacher</a>
+              </div>
+            </div>
+          </li>
+
+          <li class="sidebar-list-item">
+            <div class="dropdown" >
+              <button onclick="myFunction3()" class="dropbtn">Subject &#9660;</button>
+              <div id="myDropdown3" class="dropdown-content">
+                <a href="#">Add Subject</a>
+                <a href="#about">All Subjects</a>
+              </div>
+            </div>
+          </li>
+
           <li class="sidebar-list-item"><a href="#">Change</a></li>
           <li class="sidebar-list-item"><a href="#">Settings</a></li>
           <li class="sidebar-list-item"><a href="{% url 'logout' %}">Logout</a></li>
@@ -61,7 +129,7 @@
             <div id="bar-chart"></div>
           </div>
           <div class="charts-card">
-            <p class="chart-title">Purchase and Sales Orders</p>
+            <p class="chart-title">Students selected and changed subjects</p>
             <div id="area-chart"></div>
           </div>
         </div>
@@ -73,5 +141,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.35.3/apexcharts.min.js"></script>
    
     <script src="{% static 'js/graph-script.js' %}"></script>
+
+    <script>
+      /* When the user clicks on the button, 
+      toggle between hiding and showing the dropdown content */
+      function myFunction() {
+        document.getElementById("myDropdown").classList.toggle("show");
+      }
+      function myFunction2() {
+        document.getElementById("myDropdown2").classList.toggle("show");
+      }
+      function myFunction3() {
+        document.getElementById("myDropdown3").classList.toggle("show");
+      }
+      
+      // Close the dropdown if the user clicks outside of it
+      window.onclick = function(event) {
+        if (!event.target.matches('.dropbtn')) {
+          var dropdowns = document.getElementsByClassName("dropdown-content");
+          var i;
+          for (i = 0; i < dropdowns.length; i++) {
+            var openDropdown = dropdowns[i];
+            if (openDropdown.classList.contains('show')) {
+              openDropdown.classList.remove('show');
+            }
+          }
+        }
+      }
+      </script>
 
     {% endblock content %}
