--- a/templates/teacher/single-teacher.html
+++ b/templates/teacher/single-teacher.html
@@ -12,7 +12,7 @@
                 <nav>
                     <ul id="menuitem">
                         <li><a href="{% url 'index' %}">HOME</a></li>
-                        <li><a href="{% url 'student-dashboard' %}">PROFILE</a></li>
+                        <li><a href="{% url 'teacher-dashboard' %}">PROFILE</a></li>
                         <li><a href="{% url 'all-subjects' %}">ELECTIVE</a></li>
                         <li><a href="{% url 'time-table' %}">TIME TABLE</a></li>
                     </ul>
